# g4

./: .gitignore
HW1/: CMakeLists.txt  HW1  exampleB1  vis.mac
HW1/include/: DetectorConstruction.hh
HW1/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc
Telescope/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  DrawEnergy  DrawEnergy.cc  DrawLise  DrawLise.cc  GNUmakefile  README.md  Telescope  Telescope.cc
Telescope/data/: B10-Si.txt  B11-Si.txt  B12-Si.txt  Be10-Si.txt  Be7-Si.txt  Be9-Si.txt  C11-Si.txt  C12-Si.txt  C13-Si.txt  C14-Si.txt
Telescope/include/: LiseDetector.hh  LiseGenerator.hh  LiseHelper.hh
Telescope/src/: LiseDetector.cc  LiseGenerator.cc  LiseHelper.cc  random.cc
USphere/: CMakeLists.txt  USphere  USphere.cc  plot-8.5.py  plot-8.7407.py  plot-9.0.py  plot.py  run-1000.mac  run-8.5.mac  run-8.7407.mac  run-9.0.mac  vis.mac
USphere/include/: DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  StackingAction.hh
USphere/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc
